--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,20 +3,20 @@
 }
 
 img {
-    position:absolute;
-    width:100%;
-    height:100%;
+    position: absolute;
+    width: 100%;
+    height: 100%;
     left: 0px;
     top: 0px;
-    right:0px;
-    bottom:0px;
+    right: 0px;
+    bottom: 0px;
     z-index: -1;
-    opacity:80%;
+    opacity: 80%;
 }
 
 body {
-    display:flex;
-    width:99%;
+    display: flex;
+    width: 99%;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -25,10 +25,10 @@ body {
 .clock {
     text-align: center;
     width: 100%;
-    height: auto;
+    height: 100px;
     border: 1px;
     font-weight: bold;
-    color:#fff
+    color: #fff
 }
 
 #clock {
@@ -43,7 +43,7 @@ body {
 
 #login-form input {
     margin-top: 50%;
-    margin-bottom: 10%;
+    margin-bottom: 20%;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -75,11 +75,12 @@ body {
 }
 
 #quote {
-    color:black;
+    color: black;
     display: flex;
     align-items: center;
     flex-direction: column;
-    text-shadow: -1px 0px yellow, 0px 1px yellow, 1px 0px yellow, 0px -1px yellow;;
+    text-shadow: -1px 0px yellow, 0px 1px yellow, 1px 0px yellow, 0px -1px yellow;
+    ;
     font-weight: bold;
     font-size: 16px;
     position: absolute;
@@ -88,4 +89,8 @@ body {
 
 #quote span {
     margin-bottom: 5px;
+}
+
+#weather {
+    color: white;
 }
